# RedactorL

./: CMakeLists.txt  README.md
Lib/: String.cpp  String.h  Window.cpp  Window.h
Main/: main.cpp
