cmake_minimum_required(VERSION 3.29)
project(untitled5)

set(CMAKE_CXX_STANDARD 20)

set(PROJECT_NAME Redactor) #Создаем обычную локальную переменную с именем проекта
project(${PROJECT_NAME}) # Название проекта

set(application RedactorApplication) #Переменная с именем приложения
set(library RedactorLibrary) #Переменная с именем библиотеки

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE) #Создается переменная CMAKE_CONFIGURATION_TYPES со значением "Debug;Release" и меткой/разделом Configs, переменная сохраниется в специальном файле доступном из всех файлов,
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Lib)

add_subdirectory(Lib)
add_subdirectory(Main)
add_subdirectory(gtest)
